--- a/WebApplication2/appsettings.json
+++ b/WebApplication2/appsettings.json
@@ -3,7 +3,7 @@
     "DefaultConnection": "Host=localhost;Database=Polygon;Username=postgres;Password=52013145855"
   },
   "ApiSettings": {
-    "BaseUrl": "https://localhost:7098/Shapes" // Ваш базовий URL API
+    "BaseUrl": "https://localhost:7098/Shapes"
   },
   "Logging": {
     "LogLevel": {
