--- a/PolygonClient/PolygonClient.csproj
+++ b/PolygonClient/PolygonClient.csproj
@@ -9,11 +9,23 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Test_data\main.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\WebApplication2\Polygon.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Test_data\main.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Models\" />
   </ItemGroup>
 
 </Project>
